# star-x

./: README.md  pyproject.toml
models/define/: bert.py
models/define/configs/: bert_config.py
server/: main.py
server/model/: requests_body.py  response_body.py
server/model/enums/: status_enum.py
server/routers/: ner_routers.py
